@@ -71,13 +71,12 @@ import org.hisp.dhis.category.CategoryService;
 import org.hisp.dhis.common.IdentifiableObjectManager;
 import org.hisp.dhis.commons.collection.ListUtils;
 import org.hisp.dhis.dataapproval.DataApprovalLevelService;
-import org.hisp.dhis.jdbc.StatementBuilder;
 import org.hisp.dhis.organisationunit.OrganisationUnitService;
 import org.hisp.dhis.period.PeriodDataProvider;
 import org.hisp.dhis.program.Program;
 import org.hisp.dhis.resourcetable.ResourceTableService;
 import org.hisp.dhis.setting.SystemSettingManager;
-import org.hisp.dhis.system.database.DatabaseInfo;
+import org.hisp.dhis.system.database.DatabaseInfoProvider;
 import org.hisp.dhis.trackedentity.TrackedEntityAttribute;
 import org.hisp.dhis.trackedentity.TrackedEntityAttributeService;
 import org.hisp.dhis.trackedentity.TrackedEntityType;
@@ -105,9 +104,8 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
       DataApprovalLevelService dataApprovalLevelService,
       ResourceTableService resourceTableService,
       AnalyticsTableHookService tableHookService,
-      StatementBuilder statementBuilder,
       PartitionManager partitionManager,
-      DatabaseInfo databaseInfo,
+      DatabaseInfoProvider databaseInfoProvider,
       @Qualifier("analyticsJdbcTemplate") JdbcTemplate jdbcTemplate,
       TrackedEntityTypeService trackedEntityTypeService,
       TrackedEntityAttributeService trackedEntityAttributeService,
@@ -121,9 +119,8 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
         dataApprovalLevelService,
         resourceTableService,
         tableHookService,
-        statementBuilder,
         partitionManager,
-        databaseInfo,
+        databaseInfoProvider,
         jdbcTemplate,
         settings,
         periodDataProvider);
@@ -234,7 +231,7 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
             tet ->
                 new AnalyticsTable(
                     getAnalyticsTableType(), getTableColumns(params, tet), emptyList(), tet))
-        .collect(toList());
+        .toList();
   }
 
   private Map<String, List<Program>> getProgramsByTetUid(AnalyticsTableUpdateParams params) {
@@ -242,7 +239,7 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
         params.isSkipPrograms()
             ? idObjectManager.getAllNoAcl(Program.class).stream()
                 .filter(p -> !params.getSkipPrograms().contains(p.getUid()))
-                .collect(toList())
+                .toList()
             : idObjectManager.getAllNoAcl(Program.class);
 
     return programs.stream()
@@ -272,12 +269,14 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
                             + program.getId()
                             + ")")));
 
-    List<TrackedEntityAttribute> trackedEntityAttributes = new ArrayList<>();
-
-    if (programsByTetUid.containsKey(tet.getUid())) {
-      trackedEntityAttributes =
-          getAllTrackedEntityAttributes(tet, programsByTetUid.get(tet.getUid()));
-    }
+    List<TrackedEntityAttribute> trackedEntityAttributes =
+        programsByTetUid.containsKey(tet.getUid())
+            ?
+            // programs defined for TET -> get attr from program and TET
+            getAllTrackedEntityAttributes(tet, programsByTetUid.get(tet.getUid()))
+            :
+            // no programs defined for TET -> get only attributes from TET
+            getAllTrackedEntityAttributes(tet).toList();
 
     params.addExtraParam(tet.getUid(), ALL_TET_ATTRIBUTES, trackedEntityAttributes);
 
@@ -298,9 +297,14 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
             /* all attributes of programs */
             trackedEntityAttributeService.getProgramTrackedEntityAttributes(programs).stream(),
             /* all attributes of the trackedEntityType */
-            CollectionUtils.emptyIfNull(trackedEntityType.getTrackedEntityAttributes()).stream())
+            getAllTrackedEntityAttributes(trackedEntityType))
         .distinct()
-        .collect(toList());
+        .toList();
+  }
+
+  private Stream<TrackedEntityAttribute> getAllTrackedEntityAttributes(
+      TrackedEntityType trackedEntityType) {
+    return CollectionUtils.emptyIfNull(trackedEntityType.getTrackedEntityAttributes()).stream();
   }
 
   /**
